Fixed bug where buttons were invisible on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -102,7 +102,7 @@ main {
       }
 
       div {
-        margin-top: -1.5rem;
+        margin-bottom: 2rem;
       }
     }
   }
